force-app/main/default/objects/KindergartenDiary__c/KindergartenDiary__c.object-meta.xml
<CustomObject>
    <label>園児日誌</label>
    <nameField>
        <displayFormat>日誌{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>園児日誌</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>