force-app/main/default/objects/KindergartenDiary__c/fields/AbsenceReason__c.field-meta.xml
<CustomField>
    <fullName>AbsenceReason__c</fullName>
    <label>欠席理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>病気のため</fullName>
            </value>
            <value>
                <fullName>保護者がお休みのため</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>