force-app/main/default/objects/KindergartenDiary__c/fields/AbsentSchedule__c.field-meta.xml
<CustomField>
    <fullName>AbsentSchedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>欠席予定</label>
    <type>Checkbox</type>
</CustomField>