force-app/main/default/objects/KindergartenDiary__c/fields/AttendanceSchedule__c.field-meta.xml
<CustomField>
    <fullName>AttendanceSchedule__c</fullName>
    <label>出欠席予定</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>出席予定</fullName>
            </value>
            <value>
                <fullName>欠席予定</fullName>
            </value>
            <value>
                <fullName>出席</fullName>
            </value>
            <value>
                <fullName>欠席</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>