force-app/main/default/objects/KindergartenDiary__c/fields/AttendanceStop2__c.field-meta.xml
<CustomField>
    <fullName>AttendanceStop2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>出席停止２</label>
    <type>Checkbox</type>
</CustomField>