force-app/main/default/objects/KindergartenDiary__c/fields/AttendanceStop__c.field-meta.xml
<CustomField>
    <fullName>AttendanceStop__c</fullName>
    <formula>IF ( ISBLANK( TEXT(AttendanceStopReason__c) ), FALSE, TRUE)</formula>
    <label>出席停止</label>
    <type>Checkbox</type>
</CustomField>