force-app/main/default/objects/KindergartenDiary__c/fields/AttendanceStopReason__c.field-meta.xml
<CustomField>
    <fullName>AttendanceStopReason__c</fullName>
    <label>出席停止理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>インフルエンザ</fullName>
            </value>
            <value>
                <fullName>百日咳（百日咳）</fullName>
            </value>
            <value>
                <fullName>麻風（はしか）</fullName>
            </value>
            <value>
                <fullName>流行性耳下腺炎（おたふくかぜ）</fullName>
            </value>
            <value>
                <fullName>風疹（三日はしか）</fullName>
            </value>
            <value>
                <fullName>水痘（みずぼうそう）</fullName>
            </value>
            <value>
                <fullName>咽頭結膜熱（プール熱）</fullName>
            </value>
            <value>
                <fullName>結核（けっかく）</fullName>
            </value>
            <value>
                <fullName>髄膜炎菌性髄膜炎（ずいまくえん）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>