force-app/main/default/objects/KindergartenDiary__c/fields/AttendingSchool__c.field-meta.xml
<CustomField>
    <fullName>AttendingSchool__c</fullName>
    <defaultValue>false</defaultValue>
    <label>登園</label>
    <type>Checkbox</type>
</CustomField>