force-app/main/default/objects/KindergartenDiary__c/fields/attendingSchoolTime__c.field-meta.xml
<CustomField>
    <fullName>attendingSchoolTime__c</fullName>
    <label>登園時間</label>
    <type>DateTime</type>
</CustomField>