force-app/main/default/objects/KindergartenDiary__c/fields/BusBackNotUse__c.field-meta.xml
<CustomField>
    <fullName>BusBackNotUse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>バス帰り利用なし</label>
    <type>Checkbox</type>
</CustomField>