force-app/main/default/objects/KindergartenDiary__c/fields/BusGoingNotUse__c.field-meta.xml
<CustomField>
    <fullName>BusGoingNotUse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>バス行き利用なし</label>
    <type>Checkbox</type>
</CustomField>