force-app/main/default/objects/KindergartenDiary__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <formula>RegularDailyCharge__c +  SaturdayDailyCharge__c +  LongBreakDailyCharge__c + NurserySchoolDailyCharge__c + RegularMonthlyCharge__c + LongBreakMonthlyCharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>預かり保育料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>