force-app/main/default/objects/KindergartenDiary__c/fields/ChildcareEndTime__c.field-meta.xml
<CustomField>
    <fullName>ChildcareEndTime__c</fullName>
    <label>保育終了時間</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ChildcareEndTime</valueSetName>
    </valueSet>
</CustomField>