force-app/main/default/objects/KindergartenDiary__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>学級</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ClassSelection</valueSetName>
    </valueSet>
</CustomField>