force-app/main/default/objects/KindergartenDiary__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>園児名</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>ChildDailyR_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>