force-app/main/default/objects/KindergartenDiary__c/fields/CustodyType__c.field-meta.xml
<CustomField>
    <fullName>CustodyType__c</fullName>
    <label>預かり区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustodyType</valueSetName>
    </valueSet>
</CustomField>