force-app/main/default/objects/KindergartenDiary__c/fields/GoingBack__c.field-meta.xml
<CustomField>
    <fullName>GoingBack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>降園</label>
    <type>Checkbox</type>
</CustomField>