force-app/main/default/objects/KindergartenDiary__c/fields/GoingBackTime__c.field-meta.xml
<CustomField>
    <fullName>GoingBackTime__c</fullName>
    <label>降園時間</label>
    <type>DateTime</type>
</CustomField>