force-app/main/default/objects/KindergartenDiary__c/fields/ImportantNotes__c.field-meta.xml
<CustomField>
    <fullName>ImportantNotes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>要録情報</label>
    <referenceTo>ImportantNotes__c</referenceTo>
    <relationshipLabel>園児日誌</relationshipLabel>
    <relationshipName>ChildDailyR_ImportantNotes</relationshipName>
    <type>Lookup</type>
</CustomField>