force-app/main/default/objects/KindergartenDiary__c/fields/Lateness__c.field-meta.xml
<CustomField>
    <fullName>Lateness__c</fullName>
    <defaultValue>false</defaultValue>
    <label>遅刻</label>
    <type>Checkbox</type>
</CustomField>