force-app/main/default/objects/KindergartenDiary__c/fields/LeaveEarly__c.field-meta.xml
<CustomField>
    <fullName>LeaveEarly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>早退</label>
    <type>Checkbox</type>
</CustomField>