force-app/main/default/objects/KindergartenDiary__c/fields/LongBreakDailyApplication__c.field-meta.xml
<CustomField>
    <fullName>LongBreakDailyApplication__c</fullName>
    <formula>LongBreakMorningDailyApplication__c +  LongBreakEveningDailyApplication__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>長休預かり（日申込算出）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>