force-app/main/default/objects/KindergartenDiary__c/fields/LongBreakDailyCharge__c.field-meta.xml
<CustomField>
    <fullName>LongBreakDailyCharge__c</fullName>
    <formula>LongBreakMorningDailyCharge__c + LongBreakEveningDailyCharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>長休預かり日料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>