force-app/main/default/objects/KindergartenDiary__c/fields/LongBreakEveningDailyApplication__c.field-meta.xml
<CustomField>
    <fullName>LongBreakEveningDailyApplication__c</fullName>
    <label>長休夕方預かり（日申込算出）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>