force-app/main/default/objects/KindergartenDiary__c/fields/LongBreakEveningDailyCharge__c.field-meta.xml
<CustomField>
    <fullName>LongBreakEveningDailyCharge__c</fullName>
    <label>長休夕方預かり日料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>