force-app/main/default/objects/KindergartenDiary__c/fields/LongBreakEveningMonthlyCharge__c.field-meta.xml
<CustomField>
    <fullName>LongBreakEveningMonthlyCharge__c</fullName>
    <label>長休夕方預かり月料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>