force-app/main/default/objects/KindergartenDiary__c/fields/LongBreakMonthlyCharge__c.field-meta.xml
<CustomField>
    <fullName>LongBreakMonthlyCharge__c</fullName>
    <formula>LongBreakMorningMonthlyCharge__c + LongBreakEveningMonthlyCharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>長休預かり月料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>