force-app/main/default/objects/KindergartenDiary__c/fields/LongBreakMorningDailyApplication__c.field-meta.xml
<CustomField>
    <fullName>LongBreakMorningDailyApplication__c</fullName>
    <label>長休朝預かり（日申込算出）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>