force-app/main/default/objects/KindergartenDiary__c/fields/LongBreakMorningDailyCharge__c.field-meta.xml
<CustomField>
    <fullName>LongBreakMorningDailyCharge__c</fullName>
    <label>長休朝預かり日料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>