force-app/main/default/objects/KindergartenDiary__c/fields/LongBreakMorningMonthlyCharge__c.field-meta.xml
<CustomField>
    <fullName>LongBreakMorningMonthlyCharge__c</fullName>
    <label>長休朝預かり月料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>