force-app/main/default/objects/KindergartenDiary__c/fields/MonthlyApplication__c.field-meta.xml
<CustomField>
    <fullName>MonthlyApplication__c</fullName>
    <formula>RegularDailyApplication__c +  SaturdayDailyApplication__c +  LongBreakDailyApplication__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>預かり保育料（日申込算出）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>