force-app/main/default/objects/KindergartenDiary__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>メモ</label>
    <type>TextArea</type>
</CustomField>