force-app/main/default/objects/KindergartenDiary__c/fields/NotRideReason__c.field-meta.xml
<CustomField>
    <fullName>NotRideReason__c</fullName>
    <label>乗車しない理由</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>休み</fullName>
            </value>
            <value>
                <fullName>預かり保育</fullName>
            </value>
            <value>
                <fullName>朝預かり</fullName>
            </value>
            <value>
                <fullName>送り迎え</fullName>
            </value>
            <value>
                <fullName>送り</fullName>
            </value>
            <value>
                <fullName>迎え</fullName>
            </value>
            <value>
                <fullName>コスモ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>