force-app/main/default/objects/KindergartenDiary__c/fields/NurserySchoolDailyCharge__c.field-meta.xml
<CustomField>
    <fullName>NurserySchoolDailyCharge__c</fullName>
    <formula>NurserySchoolMorningDailyCharge__c + NurserySchoolEveningDailyCharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>保育園部預かり日料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>