force-app/main/default/objects/KindergartenDiary__c/fields/NurserySchoolEveningDailyCharge__c.field-meta.xml
<CustomField>
    <fullName>NurserySchoolEveningDailyCharge__c</fullName>
    <label>保育園部夕方預かり日料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>