force-app/main/default/objects/KindergartenDiary__c/fields/NurserySchoolMorningDailyCharge__c.field-meta.xml
<CustomField>
    <fullName>NurserySchoolMorningDailyCharge__c</fullName>
    <label>保育園部朝預かり日料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>