force-app/main/default/objects/KindergartenDiary__c/fields/Outside__c.field-meta.xml
<CustomField>
    <fullName>Outside__c</fullName>
    <label>時間外保育</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>14:30</fullName>
            </value>
            <value>
                <fullName>16:00</fullName>
            </value>
            <value>
                <fullName>17:00</fullName>
            </value>
            <value>
                <fullName>18:00</fullName>
            </value>
            <value>
                <fullName>18:30</fullName>
            </value>
            <value>
                <fullName>19:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>