force-app/main/default/objects/KindergartenDiary__c/fields/OutsideFast__c.field-meta.xml
<CustomField>
    <fullName>OutsideFast__c</fullName>
    <label>時間外保育：早朝</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7:00</fullName>
            </value>
            <value>
                <fullName>7:30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>