force-app/main/default/objects/KindergartenDiary__c/fields/PassageRoute__c.field-meta.xml
<CustomField>
    <fullName>PassageRoute__c</fullName>
    <label>通園コース</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusSelection</valueSetName>
    </valueSet>
</CustomField>