force-app/main/default/objects/KindergartenDiary__c/fields/PickUpTime__c.field-meta.xml
<CustomField>
    <fullName>PickUpTime__c</fullName>
    <label>お迎え予定</label>
    <length>5</length>
    <type>Text</type>
</CustomField>