force-app/main/default/objects/KindergartenDiary__c/fields/RegularDailyApplication__c.field-meta.xml
<CustomField>
    <fullName>RegularDailyApplication__c</fullName>
    <formula>RegularMorningDailyApplication__c +  RegularEveningDailyApplication__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>通常預かり（日申込算出）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>