force-app/main/default/objects/KindergartenDiary__c/fields/RegularDailyCharge__c.field-meta.xml
<CustomField>
    <fullName>RegularDailyCharge__c</fullName>
    <formula>RegularMorningDailyCharge__c +  RegularEveningDailyCharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>通常預かり日料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>