force-app/main/default/objects/KindergartenDiary__c/fields/RegularEveningDailyApplication__c.field-meta.xml
<CustomField>
    <fullName>RegularEveningDailyApplication__c</fullName>
    <label>通常夕方預かり（日申込算出）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>