force-app/main/default/objects/KindergartenDiary__c/fields/RegularEveningDailyCharge__c.field-meta.xml
<CustomField>
    <fullName>RegularEveningDailyCharge__c</fullName>
    <label>通常夕方預かり日料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>