force-app/main/default/objects/KindergartenDiary__c/fields/RegularEveningMonthlyCharge__c.field-meta.xml
<CustomField>
    <fullName>RegularEveningMonthlyCharge__c</fullName>
    <label>通常夕方預かり月料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>