force-app/main/default/objects/KindergartenDiary__c/fields/RegularMonthlyCharge__c.field-meta.xml
<CustomField>
    <fullName>RegularMonthlyCharge__c</fullName>
    <formula>RegularMorningMonthlyCharge__c +  RegularEveningMonthlyCharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>通常預かり月料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>