force-app/main/default/objects/KindergartenDiary__c/fields/RegularMorningDailyApplication__c.field-meta.xml
<CustomField>
    <fullName>RegularMorningDailyApplication__c</fullName>
    <label>通常朝預かり（日申込算出）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>