force-app/main/default/objects/KindergartenDiary__c/fields/RegularMorningDailyCharge__c.field-meta.xml
<CustomField>
    <fullName>RegularMorningDailyCharge__c</fullName>
    <label>通常朝預かり日料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>