force-app/main/default/objects/KindergartenDiary__c/fields/RegularMorningMonthlyCharge__c.field-meta.xml
<CustomField>
    <fullName>RegularMorningMonthlyCharge__c</fullName>
    <label>通常朝預かり月料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>