force-app/main/default/objects/KindergartenDiary__c/fields/SaturdayDailyApplication__c.field-meta.xml
<CustomField>
    <fullName>SaturdayDailyApplication__c</fullName>
    <formula>SaturdayMorningDailyapplicAtion__c +  SaturdayEveningDailyApplication__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>土曜日預かり（日申込算出）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>