force-app/main/default/objects/KindergartenDiary__c/fields/SaturdayDailyCharge__c.field-meta.xml
<CustomField>
    <fullName>SaturdayDailyCharge__c</fullName>
    <formula>SaturdayMorningDailyCharge__c + SaturdayEveningDailyCharge__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>土曜日預かり日料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>