force-app/main/default/objects/KindergartenDiary__c/fields/SaturdayEveningDailyApplication__c.field-meta.xml
<CustomField>
    <fullName>SaturdayEveningDailyApplication__c</fullName>
    <label>土曜日夕方預かり（日申込算出）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>