force-app/main/default/objects/KindergartenDiary__c/fields/SaturdayEveningDailyCharge__c.field-meta.xml
<CustomField>
    <fullName>SaturdayEveningDailyCharge__c</fullName>
    <label>土曜日夕方預かり日料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>