force-app/main/default/objects/KindergartenDiary__c/fields/SaturdayMorningDailyapplicAtion__c.field-meta.xml
<CustomField>
    <fullName>SaturdayMorningDailyapplicAtion__c</fullName>
    <label>土曜日朝預かり（日申込算出）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>