force-app/main/default/objects/KindergartenDiary__c/fields/SaturdayMorningDailyCharge__c.field-meta.xml
<CustomField>
    <fullName>SaturdayMorningDailyCharge__c</fullName>
    <label>土曜日朝預かり日料金</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>