force-app/main/default/objects/KindergartenDiary__c/fields/School2__c.field-meta.xml
<CustomField>
    <fullName>School2__c</fullName>
    <label>幼稚園2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>北広島わかば</fullName>
            </value>
            <value>
                <fullName>平岸</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>