force-app/main/default/objects/KindergartenDiary__c/fields/School__c.field-meta.xml
<CustomField>
    <fullName>School__c</fullName>
    <label>幼稚園</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SchoolSelection</valueSetName>
    </valueSet>
</CustomField>