force-app/main/default/objects/KindergartenDiary__c/fields/StaffId__c.field-meta.xml
<CustomField>
    <fullName>StaffId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>更新者</label>
    <referenceTo>Staff__c</referenceTo>
    <relationshipLabel>最後に更新した園児日誌</relationshipLabel>
    <relationshipName>LastUpdatedKindergartenDiaryes</relationshipName>
    <type>Lookup</type>
</CustomField>