force-app/main/default/objects/KindergartenDiary__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <formula>CASE( 
MOD( Date__c - DATE( 1900, 1, 7 ), 7 ), 
0, &quot;（日）&quot;, 
1, &quot;（月）&quot;, 
2, &quot;（火）&quot;, 
3, &quot;（水）&quot;, 
4, &quot;（木）&quot;, 
5, &quot;（金）&quot;, 
&quot;（土）&quot; 
)</formula>
    <label>曜日</label>
    <type>Text</type>
</CustomField>