force-app/main/default/objects/KindergartenDiary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Date__c</columns>
    <columns>Week__c</columns>
    <columns>Attendance__c</columns>
    <columns>AttendanceTime__c</columns>
    <columns>AttendingSchool__c</columns>
    <columns>attendingSchoolTime__c</columns>
    <columns>GoingBack__c</columns>
    <columns>GoingBackTime__c</columns>
    <columns>AttendanceSchedule__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>