force-app/main/default/objects/KindergartenDiary__c/listViews/asdfgh.listView-meta.xml
<ListView>
    <fullName>asdfgh</fullName>
    <columns>Contact__c</columns>
    <columns>Date__c</columns>
    <columns>Week__c</columns>
    <columns>Outside__c</columns>
    <columns>OutsideFast__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OutsideFast__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>(仮)本日の時間外保育：早朝</label>
</ListView>