force-app/main/default/objects/KindergartenDiary__c/listViews/bus1.listView-meta.xml
<ListView>
    <fullName>bus1</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>NotRideReason__c</columns>
    <columns>StaffId__c</columns>
    <columns>AbsentSchedule__c</columns>
    <columns>AttendanceSchedule__c</columns>
    <columns>AbsenceReason__c</columns>
    <columns>Date__c</columns>
    <columns>Outside__c</columns>
    <columns>Week__c</columns>
    <columns>AttendanceTime__c</columns>
    <columns>AttendingSchool__c</columns>
    <columns>AttendingSchoolTime__c</columns>
    <columns>BusGoingNotUse__c</columns>
    <columns>BusBackNotUse__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>バスコース１</label>
</ListView>