force-app/main/default/objects/KindergartenDiary__c/listViews/wert.listView-meta.xml
<ListView>
    <fullName>wert</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>StaffId__c</columns>
    <columns>AbsentSchedule__c</columns>
    <columns>AttendanceSchedule__c</columns>
    <columns>Date__c</columns>
    <columns>Week__c</columns>
    <columns>Outside__c</columns>
    <columns>OutsideFast__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>contains</operation>
        <value>北爪</value>
    </filters>
    <label>北爪のみ</label>
</ListView>